# huml

./: .gitignore  .gitmodules  CMakeLists.txt  Planning.md  README.md  doc.md  dune  get_huml.sh  get_hxlang.sh  refs.md
.github/workflows/: blank.yml
include/: arena.hpp  arguments_parser.hpp  assembler.hpp  ast.hpp  ast_evaluator.hpp  ast_fwd.hpp  ast_lowering.hpp  ast_nodes.hpp  ast_pretty_printer.hpp  ast_printer.hpp  backend.hpp  cogen.hpp  config.hpp  diagnostic.hpp  diagnostic_db.hpp  fixit_info.hpp  ir.hpp  ir_nodes.hpp  myopts.hpp  per_statement_ir.hpp  program.hpp  reader.hpp  repl.hpp  scope.hpp  source_range.hpp  stream_lookup.hpp  symbol.hpp  tmp.hpp  token.hpp  type_checking.hpp  types.hpp  vm.hpp  vm_opcodes.hpp
include/backend/: builder.hpp  cogen.hpp  defunc.hpp  node.hpp  pe.hpp  sc.hpp
include/json2humlerr/: json2humlerr.hpp
include/tmp/: bounded_array_iterator.hpp  cxmap.hpp  cxpair.hpp  cxset.hpp
old/: CMakeLists.txt  Changelog.md  README.md
old/include/: arena.hpp  arguments_parser.hpp  ast.hpp  ast_nodes.hpp  compiler.hpp  config.hpp  diagnostic.hpp  fixit_info.hpp  json.hpp  program.hpp  reader.hpp  repl.hpp  source_range.hpp  stream_lookup.hpp  token.hpp  vm.hpp  vm_opcodes.hpp  vm_symbol_table.hpp
old/include/backend/: builder.hpp  node.hpp
old/include/json2humlerr/: config.hpp
old/resources/: .latexmkrc  logo.txt
old/src/: argument_parser.cpp  assembler.cpp  cogen.cpp  exist.hpp  fixit_info.cpp  main.cpp  parser.cpp  source_range.cpp  token.cpp  type_checking.cpp
old/src/backend/: cogen.cpp  node.cpp
old/test/: vm.cpp
old/test/integration/: README.md  run_all.sh
old/test/integration/lexing/: positive_simple.bats
old/test/integration/programs/: bool.hx  higher.hx  ski.hx
resources/: grammar.tex
src/: README.md  argument_parser.cpp  assembler.cpp  ast.cpp  ast.ml  backend.cpp  cogen.cpp  compiler.cpp  diagnostic.cpp  dune  eval.ml  exist.hpp  fixit_info.cpp  huml.ml  ir.cpp  lexer.mll  main.cpp  myopts.cpp  parser.cpp  parser.mly  per_statement_ir.cpp  program.cpp  reader.cpp  reml.ml  repl.cpp  sc.ml  source_range.cpp  stream_lookup.cpp  symbol.cpp  token.cpp  tokenizer.cpp  type_checking.cpp  types.cpp  vm.cpp  vm_main.cpp
src/backend/: builder.cpp  cogen.cpp  defunc.cpp  node.cpp  pe.cpp  sc.cpp
src/lib/: ast.ml  dune  eval.ml  lexer.mll  parser.mly  sc.ml
src/sc/: sc.ml  term.ml
src/test/: test.ml
test/: cx_things.cpp  parsing_and_tokenization.cpp  vm.cpp
test/integration/: README.md  run_all.sh
test/integration/cmdargs/: invalid.bats
test/integration/lexing/: negative_simple.bats  positive_simple.bats
test/integration/parsing/: classic_programs.bats  negative_simple.bats  positive_simple.bats
test/integration/programs/: compose.hx  fibonacci.hx  id.hx  nat.hx  type_ctors.hx  vec.hx
